--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon server.js",
     "client": "npm run dev --prefix client",
     "dev:full": "concurrently \"npm run dev\" \"npm run client\"",
-    "build": "cd client && npm install && npm run build",
+    "build": "cd client && npm install --include=dev && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "node seeds/seeder.js -i",
     "seed:delete": "node seeds/seeder.js -d"
